<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE8F4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/result_tv"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="44dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="textEnd"
        android:textColor="#515151"
        android:textSize="21sp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#564D67"
        android:orientation="vertical"
        android:paddingVertical="12dp">

        <LinearLayout
            android:id="@+id/author_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#564D67"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_author"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:textSize="12sp"
                android:text="@string/author_info" />

            <Button
                android:id="@+id/button_task"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:textSize="12sp"
                android:text="@string/task_info" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#8E72B6"
                android:text="@string/open_bracket"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_close_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#8E72B6"
                android:text="@string/closed_bracket"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiple"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sum"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="@string/sum"
                android:textColor="@color/white"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_subtraction"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="@string/subtraction"
                android:textColor="@color/white"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_AC"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3C256E"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#8E72B6"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="32sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>